@@ -5,22 +5,15 @@ __docformat__ = 'restructuredtext'
 import os.path
 import chameleon
 
-from roundup.cgi.templating import StringIO, context, LoaderBase
+from roundup.cgi.templating import StringIO, context, TALLoaderBase
 
-class Loader(LoaderBase):
+class Loader(TALLoaderBase):
     def __init__(self, dir):
         self.dir = dir
         self.loader = chameleon.PageTemplateLoader(dir)
 
-    def check(self, name):
-        for extension in ['', '.html', '.xml']:
-            f = name + extension
-            src = os.path.join(self.dir, f)
-            if os.path.exists(src):
-                return (src, f)
-
     def load(self, tplname):
-        src, filename = self.check(tplname)
+        src, filename = self._find(tplname)
         return RoundupPageTemplate(self.loader.load(src))
 
 class RoundupPageTemplate(object):
